# gphotos-sync

./: .containerignore  .coveragerc  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitremotes  .notes  .pre-commit-config.yaml  .travis.yml  AUTHORS  AlbumMedia.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog  DatabaseMedia.py  Dockerfile  DriveToPicassaMatch.txt  FutureChanges  GilesCloud.code-workspace  GoogleDriveMedia.py  GoogleDriveSync.py  GoogleMedia.py  GooglePhotosMedia.py  GooglePhotosSync.py  LICENSE  LocalData.py  LocalMedia.py  MANIFEST.in  Main.py  PhotoInfo.py  PicasaMedia.py  PicasaSync.py  Pipfile  ProgressHandler.py  README.rst  TODO.txt  Utils.py  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json  local_build.sh
.github/: CONTRIBUTING.rst  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/pages/: index.html  make_switcher.py
.github/workflows/: code.yml  container_tests.sh  docs.yml  docs_clean.yml  linkcheck.yml
3.0.0/: .buildinfo  search.html
3.0.0/.doctrees/: environment.pickle  tutorials.doctree
3.0.0/_sources/: tutorials.rst.txt
3.0.0/how-to/: comparison.html
3.0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
3.0.1/.doctrees/: environment.pickle
3.0.1/_modules/: index.html
3.0.1/_static/: documentation_options.js
3.0.1/explanations/: folders.html  googleapiissues.html  notes.html  tokens.html
3.0.1/how-to/: comparison.html  cron.html  (+1 more)
3.0.2/: explanations.html  how-to.html  objects.inv
3.0.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.04/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.1.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.1.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
3.1.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.4/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
codespell/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
docs/: .notes  conf.py  explanations.rst  genindex.rst  google-project-setup.rst  how-to.rst  index.rst  reference.rst  tutorials.rst
etc/: DriveAndPhotos.rst  DriveToPicassaMatch.txt  Python3.6.rst  TestAccountMatchDiagnosis.txt  gphotos_create.sql  gphotos_empty.sqlite  matchingDiagnostics.sql
fix-488/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
fix-pr/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  py-modindex.html  reference.html  search.html  tutorials.html
gphotos/: AlbumMedia.py  BadIds.py  BaseMedia.py  Checks.py  DatabaseMedia.py  DbRow.py  GoogleAlbumMedia.py  GoogleAlbumsRow.py  GoogleAlbumsSync.py  GoogleDriveMedia.py  GoogleDriveSync.py  GoogleMedia.py  GooglePhotosDownload.py  GooglePhotosIndex.py  GooglePhotosMedia.py  GooglePhotosMediaSync.py  GooglePhotosRow.py  GooglePhotosSync.py  GooglePhotosSyncBak.py  LocalData.py  LocalFilesMedia.py  LocalFilesRow.py  LocalFilesScan.py  LocationExtract.py  LocationUpdate.py  Logging.py  Main.py  PicasaMedia.py  PicasaSync.py  Queries.py  Settings.py  Utils.py  __init__.py  __main__.py  _version_git.py  authorize.py  restclient.py
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/: .buildinfo  explanations.html  objects.inv  py-modindex.html  reference.html  searchindex.js  tutorials.html
peterjdolan-patch-1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  py-modindex.html  reference.html  search.html  tutorials.html
readme-fix/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
skeleton-merge/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
test/: testDb1.sqlite  test_account.py  test_database.py  test_full_library.py  test_match.py  test_regression.py  test_requests.py  test_setup.py  test_system.py  test_units.py  test_utils.py
tests/: test_boilerplate_removed.py  test_cli.py  test_dls_python3_skeleton.py  test_full_library.py  test_gphotos_sync.py  test_setup.py
(+561 files in other folders)
